# rendering

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  architecture  architecture.md  camera.c  camera.h  code  color.c  color.h  getdeps  main.c  main.h  makemp4  readme.md  render.c  render.h  run  shapes.c  shapes.h  vectormath.c  vectormath.h
.github/workflows/: build.yml
src/: camera.c  camera.h  debug.c  debug.h  fileio.c  fileio.h  frag.h  init.c  init.h  input.c  input.h  main.c  main.h  opengl.c  opengl.h  scene.c  scene.h  sceneio.c  serialization.c  serialization.h  shader.c  shader.h  shapeSerialization.c  shapeSerialization.h  shapes.c  shapes.h  test.scene  vector.c  vector.h  vert.h
src/glsl/: 00_header.frag.glsl  10_SDFs.frag.glsl  20_combine.frag.glsl  90_shader.frag.glsl  SDFs.glsl  fragmentShader.glsl  vertexShader.glsl
src/shaders/: 00_header.frag.glsl  50_groups.frag.glsl  90_shader.frag.glsl
